// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`6.1: KafkaSource → Filter → KafkaSink > produces correct DDL + DML 1`] = `
"CREATE TABLE \`KafkaSource_0\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`KafkaSink_2\` WITH (
  'connector' = 'kafka',
  'topic' = 'large-orders',
  'format' = 'json'
);

INSERT INTO \`KafkaSink_2\`
SELECT * FROM \`KafkaSource_0\` WHERE \`amount\` > 100;
"
`;

exports[`6.2: Two-table inner join > produces correct JOIN SQL 1`] = `
"CREATE TABLE \`KafkaSource_0\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`KafkaSource_1\` (
  \`user_id\` STRING,
  \`name\` STRING,
  \`email\` STRING
) WITH (
  'connector' = 'kafka',
  'topic' = 'users',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`KafkaSink_3\` WITH (
  'connector' = 'kafka',
  'topic' = 'enriched-orders',
  'format' = 'json'
);

INSERT INTO \`KafkaSink_3\`
SELECT * FROM \`KafkaSource_0\` INNER JOIN \`KafkaSource_1\` ON \`KafkaSource_0\`.\`user_id\` = \`KafkaSource_1\`.\`user_id\`;
"
`;

exports[`6.3: Windowed aggregation with TUMBLE > produces correct TVF + GROUP BY 1`] = `
"CREATE TABLE \`KafkaSource_0\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`KafkaSink_3\` WITH (
  'connector' = 'kafka',
  'topic' = 'hourly-totals',
  'format' = 'json'
);

INSERT INTO \`KafkaSink_3\`
SELECT \`user_id\`, SUM(\`amount\`) AS \`total_amount\`, COUNT(*) AS \`order_count\`, window_start, window_end FROM TABLE(
  TUMBLE(TABLE \`KafkaSource_0\`, DESCRIPTOR(\`event_time\`), INTERVAL '1' HOUR)
) GROUP BY \`user_id\`, window_start, window_end;
"
`;

exports[`6.4: Deduplicate produces ROW_NUMBER pattern > produces correct ROW_NUMBER with WHERE rownum = 1 1`] = `
"CREATE TABLE \`KafkaSource_0\` (
  \`event_id\` BIGINT,
  \`user_id\` STRING,
  \`event_type\` STRING,
  \`event_time\` TIMESTAMP(3),
  \`payload\` STRING,
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'events',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`KafkaSink_2\` WITH (
  'connector' = 'kafka',
  'topic' = 'deduped-events',
  'format' = 'json'
);

INSERT INTO \`KafkaSink_2\`
SELECT * FROM (
  SELECT *, ROW_NUMBER() OVER (PARTITION BY \`event_id\` ORDER BY \`event_time\` ASC) AS rownum
  FROM \`KafkaSource_0\`
) WHERE rownum = 1;
"
`;

exports[`6.5: TopN produces ROW_NUMBER pattern > produces correct ROW_NUMBER with WHERE rownum <= N 1`] = `
"CREATE TABLE \`KafkaSource_0\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`KafkaSink_2\` WITH (
  'connector' = 'kafka',
  'topic' = 'top-orders',
  'format' = 'json'
);

INSERT INTO \`KafkaSink_2\`
SELECT * FROM (
  SELECT *, ROW_NUMBER() OVER (PARTITION BY \`user_id\` ORDER BY \`amount\` DESC) AS rownum
  FROM \`KafkaSource_0\`
) WHERE rownum <= 5;
"
`;

exports[`6.6: Multi-sink produces STATEMENT SET > wraps multiple INSERT INTO in STATEMENT SET 1`] = `
"CREATE TABLE \`KafkaSource_0\` (
  \`event_id\` BIGINT,
  \`user_id\` STRING,
  \`event_type\` STRING,
  \`event_time\` TIMESTAMP(3),
  \`payload\` STRING,
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'events',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`KafkaSink_4\` WITH (
  'connector' = 'kafka',
  'topic' = 'errors',
  'format' = 'json'
);

CREATE TABLE \`KafkaSink_5\` WITH (
  'connector' = 'kafka',
  'topic' = 'all-events',
  'format' = 'json'
);

EXECUTE STATEMENT SET BEGIN
INSERT INTO \`KafkaSink_4\`
SELECT * FROM \`KafkaSource_0\` WHERE \`event_type\` = 'ERROR';
INSERT INTO \`KafkaSink_5\`
SELECT * FROM \`KafkaSource_0\`;
END;
"
`;

exports[`6.7: Catalog pipeline produces CREATE CATALOG > generates CREATE CATALOG and catalog-qualified references 1`] = `
"CREATE CATALOG \`lake\` WITH (
  'type' = 'paimon',
  'warehouse' = 's3://bucket/paimon'
);

CREATE TABLE \`KafkaSink_2\` WITH (
  'connector' = 'kafka',
  'topic' = 'page-view-alerts',
  'format' = 'json'
);

INSERT INTO \`KafkaSink_2\`
SELECT * FROM \`lake\`.\`analytics\`.\`page_views\`;
"
`;

exports[`6.8: CDC source with debezium-json > produces Kafka source DDL with debezium-json format 1`] = `
"CREATE TABLE \`KafkaSource_0\` (
  \`order_id\` BIGINT,
  \`product\` STRING,
  \`quantity\` INT,
  \`price\` DECIMAL(10, 2),
  PRIMARY KEY (\`order_id\`) NOT ENFORCED
) WITH (
  'connector' = 'kafka',
  'topic' = 'dbserver1.inventory.orders',
  'format' = 'debezium-json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`JdbcSink_1\` (
  PRIMARY KEY (\`order_id\`) NOT ENFORCED
) WITH (
  'connector' = 'jdbc',
  'url' = 'jdbc:postgresql://localhost:5432/warehouse',
  'table-name' = 'orders_snapshot'
);

INSERT INTO \`JdbcSink_1\`
SELECT * FROM \`KafkaSource_0\`;
"
`;

exports[`6.9: LookupJoin with async config > produces lookup join with proc_time and FOR SYSTEM_TIME AS OF 1`] = `
"CREATE TABLE \`KafkaSource_0\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`KafkaSink_2\` WITH (
  'connector' = 'kafka',
  'topic' = 'enriched-orders',
  'format' = 'json'
);

INSERT INTO \`KafkaSink_2\`
SELECT * FROM \`KafkaSource_0\` LEFT JOIN \`dim_users\` FOR SYSTEM_TIME AS OF \`KafkaSource_0\`.proc_time ON \`KafkaSource_0\`.\`user_id\` = \`dim_users\`.\`user_id\`;
"
`;

exports[`6.10: IntervalJoin with time bounds > produces BETWEEN ... AND ... time predicates 1`] = `
"CREATE TABLE \`KafkaSource_0\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`KafkaSource_1\` (
  \`order_id\` BIGINT,
  \`shipped_time\` TIMESTAMP(3),
  \`carrier\` STRING,
  WATERMARK FOR \`shipped_time\` AS \`shipped_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'shipments',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`KafkaSink_3\` WITH (
  'connector' = 'kafka',
  'topic' = 'order-shipments',
  'format' = 'json'
);

INSERT INTO \`KafkaSink_3\`
SELECT * FROM \`KafkaSource_0\` JOIN \`KafkaSource_1\` ON \`KafkaSource_0\`.\`order_id\` = \`KafkaSource_1\`.\`order_id\` AND \`KafkaSource_0\`.event_time BETWEEN \`KafkaSource_1\`.event_time AND \`KafkaSource_1\`.event_time + INTERVAL '7' DAY;
"
`;

exports[`6.11: Anti join produces WHERE NOT EXISTS > generates correlated subquery with NOT EXISTS 1`] = `
"CREATE TABLE \`KafkaSource_0\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`KafkaSource_1\` (
  \`order_id\` BIGINT,
  \`cancelled_at\` TIMESTAMP(3)
) WITH (
  'connector' = 'kafka',
  'topic' = 'cancellations',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`KafkaSink_3\` WITH (
  'connector' = 'kafka',
  'topic' = 'active-orders',
  'format' = 'json'
);

INSERT INTO \`KafkaSink_3\`
SELECT \`KafkaSource_0\`.* FROM \`KafkaSource_0\` WHERE NOT EXISTS (
  SELECT 1 FROM \`KafkaSource_1\` WHERE \`KafkaSource_0\`.\`order_id\` = \`KafkaSource_1\`.\`order_id\`
);
"
`;

exports[`6.12: Broadcast hint in join SQL > generates /*+ BROADCAST(alias) */ hint 1`] = `
"CREATE TABLE \`KafkaSource_0\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`KafkaSource_1\` (
  \`product_id\` STRING,
  \`product_name\` STRING,
  \`category\` STRING
) WITH (
  'connector' = 'kafka',
  'topic' = 'products',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`KafkaSink_3\` WITH (
  'connector' = 'kafka',
  'topic' = 'enriched-orders',
  'format' = 'json'
);

INSERT INTO \`KafkaSink_3\`
SELECT /*+ BROADCAST(\`KafkaSource_1\`) */ * FROM \`KafkaSource_0\` INNER JOIN \`KafkaSource_1\` ON \`KafkaSource_0\`.\`product_id\` = \`KafkaSource_1\`.\`product_id\`;
"
`;

exports[`9.1: RawSQL inlines SQL in pipeline > inlines raw SQL as a subquery 1`] = `
"CREATE TABLE \`KafkaSource_0\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`KafkaSource_1\` (
  \`user_id\` STRING,
  \`name\` STRING,
  \`email\` STRING
) WITH (
  'connector' = 'kafka',
  'topic' = 'users',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`KafkaSink_3\` WITH (
  'connector' = 'kafka',
  'topic' = 'enriched-orders',
  'format' = 'json'
);

INSERT INTO \`KafkaSink_3\`
SELECT o.*, u.name AS user_name FROM \`KafkaSource_0\` o JOIN \`KafkaSource_1\` u ON o.\`user_id\` = u.\`user_id\`;
"
`;

exports[`9.2: UDF generates CREATE FUNCTION DDL > produces CREATE FUNCTION statement 1`] = `
"CREATE FUNCTION \`my_hash\` AS 'com.mycompany.HashFunction';

CREATE TABLE \`KafkaSource_1\` (
  \`event_id\` BIGINT,
  \`user_id\` STRING,
  \`event_type\` STRING,
  \`event_time\` TIMESTAMP(3),
  \`payload\` STRING,
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'events',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`KafkaSink_3\` WITH (
  'connector' = 'kafka',
  'topic' = 'hashed-events',
  'format' = 'json'
);

INSERT INTO \`KafkaSink_3\`
SELECT \`event_id\` AS \`event_id\`, my_hash(\`payload\`) AS \`hashed\` FROM \`KafkaSource_1\`;
"
`;

exports[`9.3: MatchRecognize generates MATCH_RECOGNIZE clause > produces MATCH_RECOGNIZE with PARTITION BY, ORDER BY, MEASURES, PATTERN, DEFINE 1`] = `
"CREATE TABLE \`KafkaSource_0\` (
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_type\` STRING,
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'transactions',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`KafkaSink_2\` WITH (
  'connector' = 'kafka',
  'topic' = 'fraud-alerts',
  'format' = 'json'
);

INSERT INTO \`KafkaSink_2\`
SELECT *
FROM \`KafkaSource_0\`
MATCH_RECOGNIZE (
  PARTITION BY \`user_id\`
  ORDER BY \`event_time\`
  MEASURES
    A.\`event_time\` AS \`start_time\`,
    C.\`event_time\` AS \`end_time\`,
    SUM(B.\`amount\`) AS \`total_amount\`
  AFTER MATCH SKIP PAST LAST ROW
  PATTERN (A B+ C)
  DEFINE
    A AS A.\`event_type\` = 'login',
    B AS B.\`amount\` > 1000,
    C AS C.\`event_type\` = 'withdrawal'
);
"
`;

exports[`LateralJoin produces LATERAL TABLE > generates cross join lateral table SQL 1`] = `
"CREATE FUNCTION \`parse_address\` AS 'com.mycompany.fns.AddressParser';

CREATE TABLE \`KafkaSource_0\` (
  \`order_id\` BIGINT,
  \`shipping_address\` STRING,
  \`amount\` DECIMAL(10, 2)
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`KafkaSink_2\` WITH (
  'connector' = 'kafka',
  'topic' = 'enriched-orders',
  'format' = 'json'
);

INSERT INTO \`KafkaSink_2\`
SELECT \`KafkaSource_0\`.*, T.\`street\`, T.\`city\`, T.\`zip\` FROM \`KafkaSource_0\` JOIN LATERAL TABLE(parse_address(shipping_address)) AS T(\`street\`, \`city\`, \`zip\`);
"
`;

exports[`LateralJoin produces LATERAL TABLE > generates left join lateral table SQL 1`] = `
"CREATE TABLE \`KafkaSource_0\` (
  \`doc_id\` BIGINT,
  \`content\` STRING
) WITH (
  'connector' = 'kafka',
  'topic' = 'documents',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`KafkaSink_2\` WITH (
  'connector' = 'kafka',
  'topic' = 'entities',
  'format' = 'json'
);

INSERT INTO \`KafkaSink_2\`
SELECT \`KafkaSource_0\`.*, T.\`entity\`, T.\`entity_type\` FROM \`KafkaSource_0\` LEFT JOIN LATERAL TABLE(extract_entities(content)) AS T(\`entity\`, \`entity_type\`);
"
`;

exports[`SideOutput produces STATEMENT SET with main + side INSERTs > generates WHERE NOT for main path and WHERE for side path with metadata 1`] = `
"CREATE TABLE \`KafkaSource_0\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`KafkaSink_4\` WITH (
  'connector' = 'kafka',
  'topic' = 'processed-orders',
  'format' = 'json'
);

CREATE TABLE \`KafkaSink_1\` WITH (
  'connector' = 'kafka',
  'topic' = 'order-errors',
  'format' = 'json'
);

EXECUTE STATEMENT SET BEGIN
INSERT INTO \`KafkaSink_4\`
SELECT * FROM \`KafkaSource_0\` WHERE NOT (amount < 0 OR user_id IS NULL);
INSERT INTO \`KafkaSink_1\`
SELECT *, CURRENT_TIMESTAMP AS \`_side_ts\`, 'invalid-order' AS \`_side_tag\` FROM \`KafkaSource_0\` WHERE (amount < 0 OR user_id IS NULL);
END;
"
`;

exports[`SideOutput produces STATEMENT SET with main + side INSERTs > generates side output without tag 1`] = `
"CREATE TABLE \`KafkaSource_0\` (
  \`event_id\` BIGINT,
  \`user_id\` STRING,
  \`event_type\` STRING,
  \`event_time\` TIMESTAMP(3),
  \`payload\` STRING,
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'events',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`KafkaSink_4\` WITH (
  'connector' = 'kafka',
  'topic' = 'good-events',
  'format' = 'json'
);

CREATE TABLE \`KafkaSink_1\` WITH (
  'connector' = 'kafka',
  'topic' = 'bad-events',
  'format' = 'json'
);

EXECUTE STATEMENT SET BEGIN
INSERT INTO \`KafkaSink_4\`
SELECT * FROM \`KafkaSource_0\` WHERE NOT (payload IS NULL);
INSERT INTO \`KafkaSink_1\`
SELECT *, CURRENT_TIMESTAMP AS \`_side_ts\` FROM \`KafkaSource_0\` WHERE (payload IS NULL);
END;
"
`;

exports[`Validate produces STATEMENT SET with valid + reject INSERTs > generates full validation SQL with notNull, range, and expression rules 1`] = `
"CREATE TABLE \`KafkaSource_0\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`email\` STRING
) WITH (
  'connector' = 'kafka',
  'topic' = 'raw-orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`KafkaSink_4\` WITH (
  'connector' = 'kafka',
  'topic' = 'valid-orders',
  'format' = 'json'
);

CREATE TABLE \`KafkaSink_1\` WITH (
  'connector' = 'kafka',
  'topic' = 'invalid-orders',
  'format' = 'json'
);

EXECUTE STATEMENT SET BEGIN
INSERT INTO \`KafkaSink_4\`
SELECT * FROM \`KafkaSource_0\`
WHERE \`order_id\` IS NOT NULL
    AND \`user_id\` IS NOT NULL
    AND \`amount\` IS NOT NULL
    AND \`amount\` >= 0 AND \`amount\` <= 1000000
    AND email LIKE '%@%.%';
INSERT INTO \`KafkaSink_1\`
SELECT *,
    CASE
      WHEN \`order_id\` IS NULL THEN 'notNull:order_id'
      WHEN \`user_id\` IS NULL THEN 'notNull:user_id'
      WHEN \`amount\` IS NULL THEN 'notNull:amount'
      WHEN \`amount\` < 0 OR \`amount\` > 1000000 THEN 'range:amount[0,1000000]'
      WHEN NOT (email LIKE '%@%.%') THEN 'expression:valid_email'
    END AS \`_validation_error\`,
    CURRENT_TIMESTAMP AS \`_validated_at\`
FROM \`KafkaSource_0\`
WHERE NOT (
    \`order_id\` IS NOT NULL
    AND \`user_id\` IS NOT NULL
    AND \`amount\` IS NOT NULL
    AND \`amount\` >= 0 AND \`amount\` <= 1000000
    AND email LIKE '%@%.%'
);
END;
"
`;

exports[`Validate produces STATEMENT SET with valid + reject INSERTs > generates notNull-only validation 1`] = `
"CREATE TABLE \`KafkaSource_0\` (
  \`event_id\` BIGINT,
  \`user_id\` STRING,
  \`event_type\` STRING,
  \`event_time\` TIMESTAMP(3),
  \`payload\` STRING,
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'events',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`KafkaSink_4\` WITH (
  'connector' = 'kafka',
  'topic' = 'validated',
  'format' = 'json'
);

CREATE TABLE \`KafkaSink_1\` WITH (
  'connector' = 'kafka',
  'topic' = 'rejected',
  'format' = 'json'
);

EXECUTE STATEMENT SET BEGIN
INSERT INTO \`KafkaSink_4\`
SELECT * FROM \`KafkaSource_0\`
WHERE \`event_id\` IS NOT NULL
    AND \`user_id\` IS NOT NULL;
INSERT INTO \`KafkaSink_1\`
SELECT *,
    CASE
      WHEN \`event_id\` IS NULL THEN 'notNull:event_id'
      WHEN \`user_id\` IS NULL THEN 'notNull:user_id'
    END AS \`_validation_error\`,
    CURRENT_TIMESTAMP AS \`_validated_at\`
FROM \`KafkaSource_0\`
WHERE NOT (
    \`event_id\` IS NOT NULL
    AND \`user_id\` IS NOT NULL
);
END;
"
`;

exports[`View produces CREATE VIEW > generates CREATE VIEW from upstream Map + Source 1`] = `
"CREATE TABLE \`KafkaSource_0\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`KafkaSink_5\` WITH (
  'connector' = 'kafka',
  'topic' = 'high-value',
  'format' = 'json'
);

CREATE TABLE \`KafkaSink_7\` WITH (
  'connector' = 'kafka',
  'topic' = 'all-orders',
  'format' = 'json'
);

CREATE VIEW \`enriched_orders\` AS
SELECT \`order_id\` AS \`order_id\`, amount * quantity AS \`total\` FROM \`KafkaSource_0\`;

EXECUTE STATEMENT SET BEGIN
INSERT INTO \`KafkaSink_5\`
SELECT * FROM (
SELECT * FROM \`enriched_orders\`
) WHERE total > 1000;
INSERT INTO \`KafkaSink_7\`
SELECT * FROM \`enriched_orders\`;
END;
"
`;
